--- a/ansible-cookbooks/kafka-zookeeper/configure_kafka.yml
+++ b/ansible-cookbooks/kafka-zookeeper/configure_kafka.yml
@@ -3,9 +3,9 @@
   hosts: kafka_brokers[0]
   become: true
   vars_files:
-    - "../group_vars/all.yml"
-    - "../group_vars/kafka_brokers.yml"
-    - "../group_vars/zookeeper_nodes.yml"
+    - "group_vars/all.yml"
+    - "group_vars/kafka_brokers.yml"
+    - "group_vars/zookeeper_nodes.yml"
   tasks:
     - name: Configure Topics
       include_role:
@@ -16,9 +16,9 @@
   hosts: kafka_brokers[0]
   become: true
   vars_files:
-    - "../group_vars/all.yml"
-    - "../group_vars/kafka_brokers.yml"
-    - "../group_vars/zookeeper_nodes.yml"
+    - "group_vars/all.yml"
+    - "group_vars/kafka_brokers.yml"
+    - "group_vars/zookeeper_nodes.yml"
   tasks:
     - name: Configure ACL's
       include_role:
