--- a/ansible-cookbooks/configuration/playbook.yml
+++ b/ansible-cookbooks/configuration/playbook.yml
@@ -8,19 +8,10 @@
       shell: mkdir -p /home/ubuntu/.kube
     
     - name: 'Copy kube config file'
-      shell: cp /etc/kubernetes/kubelet.conf /home/ubuntu/.kube/config
-
-    - name: 'Copy key files for kubelet'
-      shell: cp /var/lib/kubelet/pki/kubelet-client-current.pem /home/ubuntu/.kube/kubelet-client-current.pem
+      shell: kubectl config view > /home/ubuntu/kubeadmin.conf
 
     - name: 'Change permissions for the config file'
       file:
-        path: '/home/ubuntu/.kube/config'
-        owner: ubuntu
-        mode: 0755
-
-    - name: 'Change permissions for the key file'
-      file:
-        path: '/home/ubuntu/.kube/kubelet-client-current.pem'
+        path: '/home/ubuntu/kubeadmin.config'
         owner: ubuntu
         mode: 0755
