--- a/kube-deployment-config/ingres.yml
+++ b/kube-deployment-config/ingres.yml
@@ -1,12 +1,10 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: ingress-vaccination-api
+  name: ingress-divoc
   namespace: divoc
   annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
     - http:
