--- a/inventory.ini
+++ b/inventory.ini
@@ -93,3 +93,8 @@ master_node_ip="192.168.0.6"
 ; 13.234.32.156 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
 #-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
+#-----------------------------------------------------START CLICKHOUSE-------------------------------------------------------------------
+[registry]
+192.168.0.4 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu
+#-----------------------------------------------------END CLICKHOUSE-------------------------------------------------------------------
+
