--- a/inventory.ini
+++ b/inventory.ini
@@ -94,7 +94,7 @@ master_node_ip="192.168.0.6"
 #-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
 #-----------------------------------------------------START CLICKHOUSE-------------------------------------------------------------------
-[registry]
+[clickhouse_cluster]
 192.168.0.4 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu
 #-----------------------------------------------------END CLICKHOUSE-------------------------------------------------------------------
 
