--- a/kube-deployment-config/ingres.yaml
+++ b/kube-deployment-config/ingres.yaml
@@ -6,6 +6,11 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
+  defaultBackend:
+    service:
+      name: keycloak-service
+      port:
+        number: 8080
   rules:
     - http:
         paths:
