--- a/ansible-cookbooks/postgres-etcd/vars/main.yml
+++ b/ansible-cookbooks/postgres-etcd/vars/main.yml
@@ -83,7 +83,6 @@ postgresql_password_encryption_algorithm: "scram-sha-256"  # or "md5" if your cl
 # (optional) list of users to be created (if not already exists)
 postgresql_users: 
   - {name: "registry", password: "registry123", flags: "SUPERUSER"}
-  - {name: "keycloak", password: "keycloak123", flags: "SUPERUSER"}
 #  - {name: "mydb-user", password: "mydb-user-pass", flags: "SUPERUSER"}
 #  - {name: "", password: "", flags: "NOSUPERUSER"}
 #  - {name: "", password: "", flags: "NOSUPERUSER"}
@@ -92,7 +91,7 @@ postgresql_users:
 # (optional) list of databases to be created (if not already exists)
 postgresql_databases: 
   - {db: "registry", encoding: "UTF8", lc_collate: "en_US.UTF-8", lc_ctype: "en_US.UTF-8", owner: "registry"}
-  - {db: "keycloak", encoding: "UTF8", lc_collate: "en_US.UTF-8", lc_ctype: "en_US.UTF-8", owner: "keycloak"}
+  - {db: "keycloak", encoding: "UTF8", lc_collate: "en_US.UTF-8", lc_ctype: "en_US.UTF-8", owner: "registry"}
 
 # (optional) list of database extensions to be created (if not already exists)
 postgresql_extensions: []
