--- a/inventory.ini
+++ b/inventory.ini
@@ -2,26 +2,26 @@
 #-----------------------------------------------------Start POSTGRES &  ETCD-------------------------------------------------------------------
 # etcd configuration
 [etcd_cluster]  # recommendation: 3 or 5-7 nodes
-192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # Postgres  configuration
 # if with_haproxy_load_balancing: true (in vars/main.yml)
 [balancers]
-192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # PostgreSQL nodes
 [master]
-192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [replica]
 192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
-192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [postgres_cluster:children]
 master
@@ -29,8 +29,8 @@ replica
 
 [postgres_cluster:vars]
 postgresql_users="[{name: 'registry', password: 'registry123'},{name: 'keycloak', password: 'keycloak123'}]"
-postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en_US.UTF-8', lc_ctype: 'en_US.UTF-8', owner: 'registry'},{db: 'keycloak', encoding: 'en_US.UTF-8', lc_collate: 'en_US.UTF-8', lc_ctype: 'en_US.UTF-8', owner: 'keycloak'}]"
-postgresql_pg_hba="[{type: 'host', database: 'all', user: 'all', address: '0.0.0.0/0', method: 'md5'},{type: 'host', database: 'all', user: 'all', address: '::/0', method: 'md5'}]"
+postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en_US.UTF-8', lc_ctype: 'en_US.UTF-8', owner: 'registry'},{db: 'keycloak', encoding: 'en_US.UTF-8', lc_collate: 'en_US.UTF-8', lc_ctype: 'en_US.UTF-8', owner: 'registry'}]"
+
 #-----------------------------------------------------END POSTGRES &  ETCD-------------------------------------------------------------------
 
 
