--- a/inventory.ini
+++ b/inventory.ini
@@ -2,26 +2,26 @@
 #-----------------------------------------------------Start POSTGRES &  ETCD-------------------------------------------------------------------
 # etcd configuration
 [etcd_cluster]  # recommendation: 3 or 5-7 nodes
-192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # Postgres  configuration
 # if with_haproxy_load_balancing: true (in vars/main.yml)
 [balancers]
-192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # PostgreSQL nodes
 [master]
-192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [replica]
-192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
-192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [postgres_cluster:children]
 master
@@ -34,67 +34,67 @@ postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en
 #-----------------------------------------------------END POSTGRES &  ETCD-------------------------------------------------------------------
 
 
-#-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
-[kafka-nodes]
-192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.21
-192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.28
-192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.30
+; #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
+; [kafka-nodes]
+; 192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.21
+; 192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.28
+; 192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.30
 
-[zookeeper-nodes]
-192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.21
-192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.28
-192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.30
+; [zookeeper-nodes]
+; 192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.21
+; 192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.28
+; 192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.30
 
-[kafka-nodes:vars]
-kafka_zookeeper_connect='localhost:2181'
-#-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
+; [kafka-nodes:vars]
+; kafka_zookeeper_connect='localhost:2181'
+; #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
-#-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
-[kube_control_plane]
-192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.11 ip=192.168.0.11 access_ip=192.168.0.11
+; #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
+; [kube_control_plane]
+; 192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.11 ip=192.168.0.11 access_ip=192.168.0.11
 
 
-[etcd]
-192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.11 ip=192.168.0.11 access_ip=192.168.0.11
-192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
-192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.8 ip=192.168.0.8 access_ip=192.168.0.8
+; [etcd]
+; 192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.11 ip=192.168.0.11 access_ip=192.168.0.11
+; 192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
+; 192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.8 ip=192.168.0.8 access_ip=192.168.0.8
 
-[kube_node]
-192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
-192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.8 ip=192.168.0.8 access_ip=192.168.0.8
+; [kube_node]
+; 192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
+; 192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.8 ip=192.168.0.8 access_ip=192.168.0.8
 
-[calico_rr]
+; [calico_rr]
 
-[k8s_cluster:children]
-kube_control_plane
-kube_node
-calico_rr
+; [k8s_cluster:children]
+; kube_control_plane
+; kube_node
+; calico_rr
 
-#-----------------------------------------------------END KUBERNETES-------------------------------------------------------------------
+; #-----------------------------------------------------END KUBERNETES-------------------------------------------------------------------
 
-#-----------------------------------------------------START ELASTICSEARCH-------------------------------------------------------------------
-[elasticsearch]
-192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-#-----------------------------------------------------END ELASTICSEARCH-------------------------------------------------------------------
+; #-----------------------------------------------------START ELASTICSEARCH-------------------------------------------------------------------
+; [elasticsearch]
+; 192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+; #-----------------------------------------------------END ELASTICSEARCH-------------------------------------------------------------------
 
-#-----------------------------------------------------START REDIS-------------------------------------------------------------------
-[redis-master]
-192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+; #-----------------------------------------------------START REDIS-------------------------------------------------------------------
+; [redis-master]
+; 192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
-[redis-slave]
-192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+; [redis-slave]
+; 192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
-[redis-slave:vars]
-master_node_ip="192.168.0.6"
-#-----------------------------------------------------END REDIS-------------------------------------------------------------------
+; [redis-slave:vars]
+; master_node_ip="192.168.0.6"
+; #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
-#-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
-; [registry]
-; 13.234.32.156 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
-#-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
+; #-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
+; ; [registry]
+; ; 13.234.32.156 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
+; #-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
-#-----------------------------------------------------START CLICKHOUSE-------------------------------------------------------------------
-[clickhouse_cluster]
-192.168.0.26 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-#-----------------------------------------------------END CLICKHOUSE-------------------------------------------------------------------
+; #-----------------------------------------------------START CLICKHOUSE-------------------------------------------------------------------
+; [clickhouse_cluster]
+; 192.168.0.26 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+; #-----------------------------------------------------END CLICKHOUSE-------------------------------------------------------------------
 
