--- a/inventory.ini
+++ b/inventory.ini
@@ -50,25 +50,26 @@ postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en
 ; #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
-; [kube_control_plane]
-; 192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.11 ip=192.168.0.11 access_ip=192.168.0.11
+[kube_control_plane]
+192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.13 ip=192.168.0.13 access_ip=192.168.0.13
 
 
-; [etcd]
-; 192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.11 ip=192.168.0.11 access_ip=192.168.0.11
-; 192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
-; 192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.8 ip=192.168.0.8 access_ip=192.168.0.8
+[etcd]
+192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
+192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.5 ip=192.168.0.5 access_ip=192.168.0.5
+192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.10 ip=192.168.0.10 access_ip=192.168.0.10
 
-; [kube_node]
-; 192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
-; 192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.8 ip=192.168.0.8 access_ip=192.168.0.8
+[kube_node]
+192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.5 ip=192.168.0.5 access_ip=192.168.0.5
+192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.10 ip=192.168.0.10 access_ip=192.168.0.10
+192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
 
-; [calico_rr]
+[calico_rr]
 
-; [k8s_cluster:children]
-; kube_control_plane
-; kube_node
-; calico_rr
+[k8s_cluster:children]
+kube_control_plane
+kube_node
+calico_rr
 
 ; #-----------------------------------------------------END KUBERNETES-------------------------------------------------------------------
 
