--- a/inventory.ini
+++ b/inventory.ini
@@ -35,18 +35,18 @@ postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en
 
 
 ; #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
-; [kafka-nodes]
-; 192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.21
-; 192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.28
-; 192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.30
+[kafka-nodes]
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.4
+192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.6
+192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.11
 
-; [zookeeper-nodes]
-; 192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.21
-; 192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.28
-; 192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.30
+[zookeeper-nodes]
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.4
+192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.6
+192.168.0.11 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.11
 
-; [kafka-nodes:vars]
-; kafka_zookeeper_connect='localhost:2181'
+[kafka-nodes:vars]
+kafka_zookeeper_connect='localhost:2181'
 ; #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
