--- a/ansible-cookbooks/postgres-etcd/vars/main.yml
+++ b/ansible-cookbooks/postgres-etcd/vars/main.yml
@@ -214,7 +214,7 @@ pgbouncer_default_pool_mode: "session"
 pgbouncer_generate_userlist: true  # generate the authentication file (userlist.txt) from the pg_shadow system table
 pgbouncer_auth_type: "{{ postgresql_password_encryption_algorithm }}"
 
-pgbouncer_pools:
+pgbouncer_pools: []
 #  - {name: "postgres", dbname: "postgres", pool_parameters: ""}
 #  - {name: "", dbname: "", pool_parameters: ""}
 #  - {name: "", dbname: "", pool_parameters: ""}
