--- a/inventory.ini
+++ b/inventory.ini
@@ -71,23 +71,23 @@ kube_control_plane
 kube_node
 calico_rr
 
-; #-----------------------------------------------------END KUBERNETES-------------------------------------------------------------------
+#-----------------------------------------------------END KUBERNETES-------------------------------------------------------------------
 
-; #-----------------------------------------------------START ELASTICSEARCH-------------------------------------------------------------------
-; [elasticsearch]
-; 192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-; #-----------------------------------------------------END ELASTICSEARCH-------------------------------------------------------------------
+#-----------------------------------------------------START ELASTICSEARCH-------------------------------------------------------------------
+[elasticsearch]
+192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+#-----------------------------------------------------END ELASTICSEARCH-------------------------------------------------------------------
 
-; #-----------------------------------------------------START REDIS-------------------------------------------------------------------
-; [redis-master]
-; 192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+#-----------------------------------------------------START REDIS-------------------------------------------------------------------
+[redis-master]
+192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
-; [redis-slave]
-; 192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+[redis-slave]
+192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
-; [redis-slave:vars]
-; master_node_ip="192.168.0.6"
-; #-----------------------------------------------------END REDIS-------------------------------------------------------------------
+[redis-slave:vars]
+master_node_ip="192.168.0.10"
+#-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
 ; ; [registry]
