--- a/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/defaults/main.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/defaults/main.yml
@@ -28,6 +28,6 @@ sansible_zookeeper_log_level: WARN
 sansible_zookeeper_max_open_files: 4098
 sansible_zookeeper_sync_limit: 25
 sansible_zookeeper_tick_time: 2000
-sansible_zookeeper_user: zookeeper
+sansible_zookeeper_user: root
 sansible_zookeeper_version: 3.6.3
 sansible_zookeeper_wait_for_server: 60
