--- a/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/defaults/main.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/defaults/main.yml
@@ -14,7 +14,7 @@ sansible_zookeeper_connect_port: 2888
 sansible_zookeeper_data_dir: /home/zookeeper/lib
 sansible_zookeeper_download_url: "https://downloads.apache.org/zookeeper/zookeeper-{{ sansible_zookeeper_version }}/apache-zookeeper-{{ sansible_zookeeper_version }}-bin.tar.gz"
 sansible_zookeeper_election_port: 3888
-sansible_zookeeper_group: zookeeper
+sansible_zookeeper_group: root
 sansible_zookeeper_hosts:
   - localhost
 sansible_zookeeper_id: 1
