--- a/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/defaults/main.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/defaults/main.yml
@@ -14,7 +14,7 @@ sansible_zookeeper_connect_port: 2888
 sansible_zookeeper_data_dir: /home/zookeeper/lib
 sansible_zookeeper_download_url: "https://downloads.apache.org/zookeeper/zookeeper-{{ sansible_zookeeper_version }}/apache-zookeeper-{{ sansible_zookeeper_version }}-bin.tar.gz"
 sansible_zookeeper_election_port: 3888
-sansible_zookeeper_group: root
+sansible_zookeeper_group: zookeeper
 sansible_zookeeper_hosts:
   - localhost
 sansible_zookeeper_id: 1
@@ -28,6 +28,6 @@ sansible_zookeeper_log_level: WARN
 sansible_zookeeper_max_open_files: 4098
 sansible_zookeeper_sync_limit: 25
 sansible_zookeeper_tick_time: 2000
-sansible_zookeeper_user: root
+sansible_zookeeper_user: zookeeper
 sansible_zookeeper_version: 3.6.3
 sansible_zookeeper_wait_for_server: 60
