--- a/ansible-cookbooks/kafka-zookeeper/roles/kafka/tasks/build.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/kafka/tasks/build.yml
@@ -2,6 +2,7 @@
 
 - name: Ensure install folders
   become: yes
+  become_method: sudo
   become_user: "{{ sansible_kafka_user }}"
   file:
     state: directory
@@ -20,6 +21,7 @@
 
 - name: Fetch kafka binary package
   become: yes
+  become_method: sudo
   become_user: "{{ sansible_kafka_user }}"
   get_url:
     dest: "/home/{{ sansible_kafka_user }}/tmp/\
@@ -29,6 +31,7 @@
 
 - name: Uncompress the kafka tar
   become: yes
+  become_method: sudo
   become_user: "{{ sansible_kafka_user }}"
   unarchive:
     copy: no
@@ -38,6 +41,7 @@
 
 - name: Link kafka to the right version
   become: yes
+  become_method: sudo
   become_user: "{{ sansible_kafka_user }}"
   file:
     path: "/home/{{ sansible_kafka_user }}/kafka"
@@ -46,6 +50,7 @@
 
 - name: link config dir
   become: yes
+  become_method: sudo
   become_user: "{{ sansible_kafka_user }}"
   file:
     force: yes
