--- a/ansible-cookbooks/kafka-zookeeper/kafka_and_zookeeper.yml
+++ b/ansible-cookbooks/kafka-zookeeper/kafka_and_zookeeper.yml
@@ -4,7 +4,7 @@
   pre_tasks:
     - raw: test -e /usr/bin/python || (apt -y update && apt install -y python3 python3-zipstream)
 - name: Install zookeeper
-  hosts: kafka
+  hosts: kafka-nodes
   become: true
   roles:
     - role: zookeeper
