--- a/ansible-cookbooks/kafka-zookeeper/roles/kafka/handlers/main.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/kafka/handlers/main.yml
@@ -2,18 +2,21 @@
 
 - name: start kafka
   become: yes
+  become_user: root
   service:
     name: kafka
     state: started
 
 - name: stop kafka
   become: yes
+  become_user: root
   service:
     name: kafka
     state: stopped
 
 - name: restart kafka
   become: yes
+  become_user: root
   service:
     name: kafka
     state: restarted
