--- a/kube-deployment-config/ingress.yaml
+++ b/kube-deployment-config/ingress.yaml
@@ -1,7 +1,10 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ingress-divoc
+  namespace: divoc
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
     - http:
