--- a/kube-deployment-config/ingress.yaml
+++ b/kube-deployment-config/ingress.yaml
@@ -9,56 +9,56 @@ spec:
   rules:
     - http:
         paths:
-          - path: /auth/*
+          - path: /auth
             pathType: Prefix
             backend:
               service:
                 name: keycloak-service
                 port: 
                   number: 8080
-          - path: /divoc/*
+          - path: /divoc
             pathType: Prefix
             backend:
               service:
                 name: vaccination-api
                 port: 
                   number: 8000
-          - path: /certificate/api/*
+          - path: /certificate/api
             pathType: Prefix
             backend:
               service:
                 name: certificate-api
                 port: 
                   number: 4321
-          - path: /cert/*
+          - path: /cert
             pathType: Prefix
             backend:
               service: 
                 name: digilocker-support-api
                 port: 
                   number: 8003
-          - path: /divoc/api/citizen/*
+          - path: /divoc/api/citizen
             pathType: Prefix
             backend:
               service: 
                 name: registration-api
                 port: 
                   number: 8002
-          - path: /divoc/admin/*
+          - path: /divoc/admin
             pathType: Prefix
             backend:
               service: 
                 name: portal-api
                 port: 
                   number: 8001
-          - path: /config/*
+          - path: /config
             pathType: Prefix
             backend:
               service:
                 name: flagr
                 port: 
                   number: 18000
-          - path: /*
+          - path: /
             pathType: Prefix
             backend:
               service: 
