--- a/inventory.ini
+++ b/inventory.ini
@@ -84,10 +84,10 @@ calico_rr
 master_node_ip="192.168.0.10"
 #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
-; #-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
-; ; [registry]
-; ; 13.234.32.156 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
-; #-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
+#-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
+[registry]
+192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
+#-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START CLICKHOUSE-------------------------------------------------------------------
 ; [clickhouse_cluster]
