--- a/ansible-cookbooks/docker-registry/roles/container-registry/defaults/main.yml
+++ b/ansible-cookbooks/docker-registry/roles/container-registry/defaults/main.yml
@@ -3,6 +3,6 @@ SRV_PATH: '/data/srv'
 OPT_PATH: '/opt/divoc'
 
 DOCKER_REGISTRY_PORT: 5000
-DOCKER_REGISTRY_HTPASSWD_ENABLED: true
+DOCKER_REGISTRY_HTPASSWD_ENABLED: false
 DOCKER_REGISTRY_USER: 'root'
 DOCKER_REGISTRY_PASSWORD: 'root'
